--- a/hometown/index.html
+++ b/hometown/index.html
@@ -14,15 +14,15 @@
         </div>
         <div class="places">
             <div class="visit">
-                <div class="place" id="trecks">
+                <div class="place">
                     <img id="border" src="./images/nandihills_overview.jpeg" alt="Nandi Hills">
                     <p>Go for a short ride</p>
                 </div>
-                <div class="place" id="edu">
+                <div class="place">
                     <img id="border" src="./images/planetary_meusem_bengaluru.jpeg" alt="Pandit Jawaharlal Neharu Planetary museum">
                     <p>Explore the silicon city of India</p>
                 </div>
-                <div class="place" id="food">
+                <div class="place">
                     <img id="border" src="./images/vv-puram street.jpeg" alt="food-street">
                     <p>Something to whet your Appetite</p>
                 </div>           
@@ -36,8 +36,8 @@
                 <img  src="./images/zoro.jpeg" alt="Profile" >
             </div>
             <div class="info">
-                <h1>MRT</h1>
-                <p> Hi I am M, I have lived in banglore for the past 20 years</p>
+                <h1><strong>Zoro</strong></h1>
+                <p>To face one who is extraordinary I cannot allow myself to be ordinary.</p>
             </div>
         </div>
     </body>
