--- a/profile/profile.html
+++ b/profile/profile.html
@@ -6,7 +6,7 @@
     <title>ProfileCard</title>
 </head>
 <body>
-    <div>
+    <div class="flex justify-center items-center pl-6 bg-black-200">
         <h2>Raviteja Madineni</h2>
         <img src="/html_css/images/profilepic.png" alt="Profilepic" width="220rem" height="150rem">
     </div>
